--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -185,3 +185,33 @@
         }
     }
 }
+
+
+#top-pop {
+    width: 350px;
+    background: #fff;
+    position: absolute;
+    z-index: 999999;
+    right: 10px;
+    top: 10px;
+    padding: 10px;
+    border-radius:5px;
+
+    h2 {
+        margin-top:0px;
+        display: flex;
+        justify-content: space-between;
+
+        ion-icon{
+            font: size 24px;
+            vertical-align: middle;
+        }
+    }
+}
+
+.button-box{
+    display:flex;
+    ion-button{
+        width:50%;
+    }
+}
