--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -189,7 +189,7 @@
 
 #top-pop {
     width: 350px;
-    background: #fff;
+    background: var(--ion-color-light);
     position: absolute;
     z-index: 999999;
     right: 10px;
