Generate Avatar Added with APi.

--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -8,7 +8,7 @@
   <div id="container">
 
     <div class="gett">
-      <img [src]="profileImg" *ngIf="profileImg" />
+      <img [src]="profileImg" *ngIf="profileImg" id="proImg"/>
     </div>
 
     <div class="flex justify-content-evenly ion-margin-bottom">
